[package]
name = "snipping_tool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.22.0"
egui = "0.22.0"
egui_extras = {version="0.22.0", features = ["image"]}
image = { version = "0.24", default-features = false, features = ["png", "jpeg", "gif", "webp-encoder", "tiff"] }
screenshots = "0.7.1"
native-dialog = "0.6.4"
arboard = "3.2.0"
rdev = "0.5.3"
