[package]
name = "snipping_tool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = { version="0.22.0", features = ["persistence"]}
egui = { version="0.22.0", features = ["persistence"]}
egui_extras = {version="0.22.0", features = ["image"]}
image = { version = "0.24", default-features = false, features = ["png", "jpeg", "gif", "webp-encoder", "tiff"] }
screenshots = "0.7.1"
native-dialog = "0.6.4"
arboard = "3.2.0"
rdev = "0.5.3"
itertools = "0.11.0"
imageproc = "0.23.0"
serde = "1.0.188"
serde_json = "1.0.107"
confy = "0.5.1"

